15-pod-security/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: security-context-demo
  labels:
    app: security-context-demo
    workshop: workshop
spec:
  type: ClusterIP
  ports:
    -
      name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: security-context-demo
