15-pod-security/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: security-context-demo
  labels:
    app: security-context-demo
    workshop: workshop
spec:
  tls:
    - hosts:
        - security-context-demo.<YOUR_NAME>.plgrnd.be
  rules:
    - host: security-context-demo.<YOUR_NAME>.plgrnd.be
      http:
        paths:
          - path: /
            backend:
              serviceName: security-context-demo
              servicePort: 80
